<resources>
    <string name="app_name">Final Begimai</string>
    <string name="home">Home</string>
    <string name="banjara_hills_hyder">21-42-34, Banjara Hills, Hyder....</string>
    <string name="edit">Edit</string>
    <string name="your_preferences">Your Preferences</string>
    <string name="now_order_user_specific_food_directly_below">Now order user specific food directly below!</string>
    <string name="user_1">User 1</string>
    <string name="user_2">User 2</string>
    <string name="user_3">User 3</string>
    <string name="user_4">User 4</string>
</resources>