<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ScrollView>
        <ImageView
            android:id="@+id/home_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/home"
            app:srcCompat="@drawable/home" />

        <TextView
            android:id="@+id/home"
            style="@style/title"
            android:layout_width="57dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/home"
            app:layout_constraintBottom_toTopOf="@id/description"
            app:layout_constraintStart_toEndOf="@+id/home_icon"
            app:layout_constraintTop_toTopOf="@+id/home_icon" />

        <TextView
            android:id="@+id/description"
            style="@style/usual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banjara_hills_hyder"
            app:layout_constraintBottom_toBottomOf="@id/home_icon"
            app:layout_constraintStart_toStartOf="@+id/home"
            app:layout_constraintTop_toBottomOf="@+id/home" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/description"
            app:layout_constraintTop_toTopOf="@+id/home"
            app:srcCompat="@drawable/_166_1" />


        <SearchView
            android:id="@+id/search"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description">

        </SearchView>


        <ImageView
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/search"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:srcCompat="@drawable/rectangle_3_11" />

        <ImageView
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/button"
            app:srcCompat="@drawable/group" />

        <ImageView
            android:id="@+id/option1"
            android:layout_width="365dp"
            android:layout_height="130dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toStartOf="@+id/option2"
            app:layout_constraintStart_toStartOf="@+id/search"
            app:layout_constraintTop_toBottomOf="@+id/search"
            app:srcCompat="@drawable/rectangle_305__1_" />

        <ImageView
            android:id="@+id/option2"
            android:layout_width="14dp"
            android:layout_height="132dp"
            app:layout_constraintBottom_toBottomOf="@+id/option1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/option1"
            app:srcCompat="@drawable/rectangle_305" />

        <LinearLayout
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/option1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ellipse_42"
                android:layout_marginEnd="6dp"
                android:background="@color/light_mint"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ellipse_42"
                android:layout_marginEnd="6dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ellipse_42"
                android:layout_marginEnd="6dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ellipse_42"
                android:layout_marginEnd="6dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress">

            <TextView
                style="@style/title_green"
                android:layout_width="318dp"
                android:layout_height="wrap_content"
                android:text="@string/your_preferences" />

            <TextView
                style="@style/usual_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edit" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_baseline_edit_24" />
        </LinearLayout>

        <TextView
            android:id="@+id/subtitle"
            style="@style/usual"
            android:layout_width="319dp"
            android:layout_height="52dp"
            android:text="@string/now_order_user_specific_food_directly_below"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="@+id/scrollView2" />

        <LinearLayout
            android:id="@+id/user1"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/grey_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle">

            <TextView
                style="@style/title"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/vector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user2"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/grey_background"
            app:layout_constraintEnd_toEndOf="@+id/user1"
            app:layout_constraintStart_toStartOf="@+id/user1"
            app:layout_constraintTop_toBottomOf="@+id/user1">

            <TextView
                style="@style/title"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/vector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user3"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/grey_background"
            app:layout_constraintEnd_toEndOf="@+id/user2"
            app:layout_constraintStart_toStartOf="@+id/user2"
            app:layout_constraintTop_toBottomOf="@+id/user2">

            <TextView
                style="@style/title"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/vector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user4"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/grey_background"
            app:layout_constraintEnd_toEndOf="@+id/user3"
            app:layout_constraintStart_toStartOf="@+id/user3"
            app:layout_constraintTop_toBottomOf="@+id/user3">

            <TextView
                style="@style/title"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_4" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/vector" />
        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>